# Social-Network

./: .env.template  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 884f6f3a17c1_add_user_model.py
src/: config.py  database.py  main.py
src/auth/: config.py  constants.py  dependencies.py  exceptions.py  middleware.py  models.py  router.py  schemas.py  utils.py
src/auth/services/: __init__.py  create_jwt.py  update_jwt.py  user.py
src/chat/: router.py
src/static/js/: chat.js
src/templates/: base.html  profile.html
src/templates/auth/: login.html  logout.html  registration.html
src/templates/chat/: chat.html
